service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-rest-demo-service
spec:
  selector:
    app: spring-rest-demo
  ports:
    - protocol: TCP
      port: 80   # External port
      targetPort: 8080 # Container port
  type: LoadBalancer # Expose externally using a GCP Load Balancer
  # Alternatively, use ClusterIP and an Ingress controller
